// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component tests Checkbox all props 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="All Props Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  accessible={true}
  boxSide="end"
  defaultChecked={true}
  disabled={true}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "display": "flex",
      "flexDirection": "row",
      "marginTop": 0,
      "minHeight": 14,
      "position": "relative",
    }
  }
>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#a19f9d",
        "fontFamily": "Segoe UI",
        "fontSize": 14,
        "fontWeight": "400",
        "margin": 0,
        "marginTop": 3,
      }
    }
  >
    All Props Checkbox
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#f3f2f1",
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 0,
        "marginStart": 4,
        "minHeight": 14,
        "minWidth": 14,
      }
    }
  >
    <Text
      style={
        Object {
          "aspectRatio": 1,
          "color": "#bdbdbd",
          "fontFamily": "Segoe UI",
          "fontSize": 10,
          "fontWeight": "400",
          "margin": 0,
          "opacity": 1,
          "position": "relative",
          "textAlign": "center",
          "textAlignVertical": "center",
          "top": -1,
        }
      }
    >
      ✓
    </Text>
  </View>
</View>
`;

exports[`Checkbox component tests Checkbox all tokens 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="All Tokens Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  defaultChecked={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "purple",
      "display": "flex",
      "flexDirection": "row",
      "marginTop": 0,
      "minHeight": 14,
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "red",
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 10,
        "marginStart": 8,
        "minHeight": 14,
        "minWidth": 14,
      }
    }
  >
    <Text
      style={
        Object {
          "aspectRatio": 1,
          "color": "pink",
          "fontFamily": "Segoe UI",
          "fontSize": 10,
          "fontWeight": "400",
          "margin": 0,
          "opacity": 0.7,
          "position": "relative",
          "textAlign": "center",
          "textAlignVertical": "center",
          "top": -1,
        }
      }
    >
      ✓
    </Text>
  </View>
  <Text
    style={
      Object {
        "borderColor": "green",
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "yellow",
        "fontFamily": "Wingdings",
        "fontSize": 20,
        "fontWeight": "900",
        "margin": 0,
        "marginTop": 3,
      }
    }
  >
    All Tokens Checkbox
  </Text>
</View>
`;

exports[`Checkbox component tests Checkbox default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  defaultChecked={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyUp={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "display": "flex",
      "flexDirection": "row",
      "marginTop": 0,
      "minHeight": 14,
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#323130",
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 4,
        "marginStart": 0,
        "minHeight": 14,
        "minWidth": 14,
      }
    }
  >
    <Text
      style={
        Object {
          "aspectRatio": 1,
          "color": "#201f1e",
          "fontFamily": "Segoe UI",
          "fontSize": 10,
          "fontWeight": "400",
          "margin": 0,
          "opacity": 0,
          "position": "relative",
          "textAlign": "center",
          "textAlignVertical": "center",
          "top": -1,
        }
      }
    >
      ✓
    </Text>
  </View>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#323130",
        "fontFamily": "Segoe UI",
        "fontSize": 14,
        "fontWeight": "400",
        "margin": 0,
        "marginTop": 3,
      }
    }
  >
    Default Checkbox
  </Text>
</View>
`;
